fixd location button position on mobile, made inputs for confirmation code larger on mobile, added script to jump to next feild in confirmation code input

--- a/src/web/theme/components/nav-admin.less
+++ b/src/web/theme/components/nav-admin.less
@@ -1,3 +1,5 @@
 .navbar-btn {
-    margin-left: 15px;
+    @media (min-width: @screen-sm-min) {
+        margin-left: 15px;
+    }
 }
